操作系统初版完成

--- a/408/操作系统.md
+++ b/408/操作系统.md
@@ -1455,6 +1455,415 @@ PV操作
 
 
 
+---
+
+### 内存空间的扩充
+
+
+
+
+
+![image-20250312201656300](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312201656300.png)
+
+#### 覆盖技术
+
+![image-20250312203339735](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203339735.png)
+
+![image-20250312203350663](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203350663.png)
+
+
+
+
+
+#### 交换技术
+
+![image-20250312203402621](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203402621.png)
+
+
+
+![image-20250312203409121](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203409121.png)
+
+![image-20250312203417513](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203417513.png)
+
+
+
+#### 虚拟存储技术
+
+**见下文**
+
+
+
+## 内存分配
+
+![image-20250312203438142](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203438142.png)
+
+
+
+### 连续分配管理方式
+
+#### 单一连续分配
+
+![image-20250312203723736](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203723736.png)
+
+
+
+#### 固定分区分配
+
+![image-20250312203739181](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203739181.png)
+
+![image-20250312203726648](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203726648.png)
+
+#### 动态分区分配
+
+![image-20250312203743983](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312203743983.png)
+
+![1741783070920](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741783070920.png)
+
+![1741783075102](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741783075102.png)
+
+
+
+![1741783088287](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741783088287.png)
+
+![image-20250312214217679](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312214217679.png)
+
+![1741783101961](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741783101961.png)
+
+![1741783107206](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741783107206.png)
+
+![1741783111632](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741783111632.png)
+
+![1741783120475](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741783120475.png)
+
+![1741783126185](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741783126185.png)
+
+
+
+
+
+### 动态分区分配算法
+
+![image-20250312210257460](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312210257460.png)
+
+### 首次适应算法
+
+![image-20250312210743173](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312210743173.png)
+
+![1741784628847](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741784628847.png)
+
+
+
+### 最佳适应算法
+
+![image-20250312210758067](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312210758067.png)
+
+![1741784638943](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741784638943.png)
+
+
+
+![image-20250312210830824](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312210830824.png)
+
+### 最坏适应算法
+
+![image-20250312210828149](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312210828149.png)
+
+### 邻近适应算法
+
+![image-20250312210849239](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312210849239.png)
+
+
+
+![image-20250312210852293](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312210852293.png)
+
+
+
+## 非连续分配
+
+![image-20250312210904789](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312210904789.png)
+
+## 基本分页存储管理的概念
+
+![image-20250312211224161](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312211224161.png)
+
+![image-20250312211226195](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312211226195.png)
+
+![image-20250312211246414](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312211246414.png)
+
+![image-20250312211301108](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312211301108.png)
+
+![image-20250312211326574](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312211326574.png)
+
+
+
+![image-20250312211336518](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312211336518.png)
+
+![image-20250312211356932](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312211356932.png)
+
+![image-20250312211411857](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312211411857.png)
+
+![1741785261838](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785261838.png)
+
+![1741785265736](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785265736.png)
+
+![1741785271170](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785271170.png)
+
+![1741785275079](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785275079.png)
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785275079.png)
+
+![1741785283157](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785283157.png)
+
+
+
+## 基本地址变换机构
+
+![1741785313354](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785313354.png)
+
+![1741785318317](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785318317.png)
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785318317.png)
+
+![1741785327933](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785327933.png)
+
+![1741785331852](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785331852.png)
+
+![1741785336244](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785336244.png)
+
+![1741785339886](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785339886.png)
+
+
+
+## 具有块表的地址变换机构
+
+![1741785389626](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785389626.png)
+
+![1741785386026](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785386026.png)
+
+当这个进程上处理机运行时，系统会清空快表的内容，当进程切换的时候，快表是一个硬件，**块表的内容也需要被清除**
+
+
+
+
+
+![1741785382073](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785382073.png)
+
+![1741785368274](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785368274.png)
+
+![1741785362020](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785362020.png)
+
+
+
+![1741785524515](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785524515.png)
+
+![1741785527643](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785527643.png)
+
+
+
+
+
+## 两级页表
+
+![1741786084377](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786084377.png)
+
+![1741786088050](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786088050.png)
+
+![147f69a067e24b17611c80822c7d274](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/147f69a067e24b17611c80822c7d274.jpg)
+
+![1741786093984](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786093984.png)
+
+![1741785561443](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785561443.png)
+
+![1741785565095](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785565095.png)
+
+![1741785569744](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785569744.png)
+
+![1741785572859](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785572859.png)
+
+![1741785576509](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785576509.png)
+
+![1741785579604](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785579604.png)
+
+
+
+
+
+
+
+
+
+
+
+## 基本分段存储管理方式
+
+![1741785603696](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785603696.png)
+
+![1741785606339](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785606339.png)
+
+![1741785609725](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785609725.png)
+
+![1741785614620](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785614620.png)
+
+![1741785617763](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785617763.png)
+
+![1741785621674](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785621674.png)
+
+![1741785625309](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785625309.png)
+
+
+
+**分页(一维地址空间)**
+分页机制中的，程序员只需要提供一个记忆符(通常是一个线性地址)，操作系统会负责将这个线性地址映射到物理内存地址。这里的用户地址空间看起来是一个连续的内存区域，但实际上可能分布在不同的物理内存页中。
+例子: 假设程序员需要访问内存地址0x1234，这个地址是线性的。操作系统通过页表将0x1234映射到实际的物理内存地址，例如OxABCD。
+
+---
+
+
+
+**分段(二维地址空间)**
+在分段机制中，用户进程地址空间是二维的。这意味着程序员在引用内存地址时不仅需要提供段名，还需要提供段内地址。每个段表示一个独立的内存区域，可能包含特定类型的数据，例如代码段、数据段和堆栈段。
+
+
+
+**进程和段表的关系：**
+
+进程和段表在操作系统中有着密切的关系。进程是程序在系统中的一次执行活动，它包含了程序计数器、寄存器、堆栈、数据段等。而段表是操作系统用来管理段式内存的一种数据结构。
+段表记录了进程的每一个段的信息，包括段的起始地址、段的长度、段的权限等。它帮助操作系统将进程的逻辑地址转换成物理地址，以便对内存进行有效管理。每个进程都有一个独立的段表，通过段表，操作系统可以实现内存保护和共享，提高内存利用率。
+可以将段表看作是进程的内存地图，帮助操作系统跟踪和管理进程所使用的各个内存段。因此，段表对于进程的内存管理至关重要。
+
+---
+
+
+
+
+
+![1741785745463](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785745463.png)
+
+![1741785748060](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785748060.png)
+
+![1741785750395](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785750395.png)
+
+![1741785753797](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785753797.png)
+
+
+
+## 段页式管理方式
+
+![1741785765729](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785765729.png)
+
+![image-20250312212930533](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312212930533.png)
+
+![1741785771709](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785771709.png)
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785774797.png)
+
+![image-20250312213701134](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213701134.png)
+
+![1741785780471](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785780471.png)
+
+![1741785785426](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785785426.png)
+
+![image-20250312212946408](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312212946408.png)
+
+![1741785793734](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785793734.png)
+
+![1741785797112](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785797112.png)
+
+![1741785800508](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785800508.png)
+
+
+
+## 虚拟内存的基本概念
+
+![image-20250312212551719](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312212551719.png)
+
+![image-20250312212556066](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312212556066.png)
+
+
+
+![1741785842349](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785842349.png)
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785844702.png)
+
+![1741785850171](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785850171.png)
+
+![image-20250312213124242](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213124242.png)
+
+## 请求分页管理方式
+
+![image-20250312213137683](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213137683.png)
+
+![1741785871762](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785871762.png)
+
+![1741785874395](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785874395.png)
+
+![image-20250312213159248](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213159248.png)
+
+![1741785877000](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785877000.png)
+
+![image-20250312213223030](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213223030.png)
+
+![1741785882473](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785882473.png)
+
+![1741785885325](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785885325.png)
+
+![1741785888956](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785888956.png)
+
+![image-20250312213300881](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213300881.png)
+
+![image-20250312213321861](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213321861.png)
+
+![1741785904509](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741785904509.png)
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213326805.png)
+
+## 页面置换算法
+
+![1741786418463](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786418463.png)
+
+![1741786421620](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786421620.png)
+
+![1741786423962](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786423962.png)
+
+![1741786430657](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786430657.png)
+
+![1741786434303](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786434303.png)
+
+![1741786438477](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786438477.png)
+
+![1741786442118](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786442118.png)
+
+![1741786446304](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786446304.png)
+
+![1741786448891](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786448891.png)
+
+## 页面分配策略
+
+![1741786687618](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786687618.png)
+
+![1741786691783](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786691783.png)
+
+![1741786694342](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786694342.png)
+
+![1741786696958](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786696958.png)
+
+![1741786698999](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786698999.png)
+
+![1741786701609](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786701609.png)
+
+![1741786703950](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786703950.png)
+
+![1741786706252](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786706252.png)
+
+![1741786755678](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786755678.png)
+
+![1741786758282](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786758282.png)
+
+![1741786762478](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741786762478.png)
+
+## 内存映射文件
+
+![image-20250312213559335](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312213559335.png)
+
 # 第四章
 
 ![image-20250305210315310](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250305210315310.png)
@@ -2066,11 +2475,606 @@ PV操作
 
 ## 虚拟文件系统
 
+![image-20250312184121026](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312184121026.png)
 
 
 
+![image-20250312184134034](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312184134034.png)
+
+![image-20250312184148090](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312184148090.png)
+
+![image-20250312184155481](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312184155481.png)
+
+
+
+然后会把文件的inode从外存先读入主存，然后读入的inode的信息会被复制到vnode中
+
+![image-20250312184345066](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312184345066.png)
+
+![image-20250312184339332](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312184339332.png)
+
+那么这个u盘的这个文件系统就需要挂载到操作系统上
+
+具体就是要挂载到操作系统的虚拟文件系统
+
+**挂载点**其实就是一个目录，当**一个目录为挂载点**时，该目录就是对应文件系统的**入口**了
 
 
 
 # 第五章
 
+## IO设备的基本概念和分类
+
+
+
+![1741776533631](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776533631.png)
+
+![1741776536786](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776536786.png)
+
+![1741776540143](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776540143.png)
+
+![1741776543007](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776543007.png)
+
+![1741776546648](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776546648.png)
+
+---
+
+## IO控制器
+
+![1741776622005](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776622005.png)
+
+![1741776625366](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776625366.png)
+
+![1741776629044](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776629044.png)
+
+![1741776632688](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776632688.png)
+
+![1741776641264](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776641264.png)
+
+![1741776644361](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776644361.png)
+
+![1741776647701](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776647701.png)
+
+---
+
+## IO控制方式
+
+![1741776768203](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776768203.png)
+
+### 程序直接控制方式
+
+![1741776772602](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776772602.png)
+
+![1741776777273](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776777273.png)
+
+![1741776784269](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776784269.png)
+
+### 中断驱动方式
+
+
+
+![1741776787638](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776787638.png)
+
+![1741776791018](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776791018.png)
+
+### DMA方式
+
+
+
+![1741776793897](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741776793897.png)
+
+![image-20250312185510800](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312185510800.png)
+
+只有到DMA完成的整个CPU指定的一系列任务后，它才会向CPU发送一个中断信号，然后CPU再介入进行后序的处理
+
+DMA控制器在读入数据的过程中也是一个字一个字的读入的，然后每次读入的字都是放到DR，最终就可以完成一整块的数据读入操作
+
+（一个字一个字地读入DR，读满一块再交换  ，一块数据全读完才会通知吧，之前读一个字就需要通知）
+
+![image-20250312190010145](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312190010145.png)
+
+### 通道控制方式
+
+
+
+
+
+![1741777214768](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777214768.png)
+
+![1741777217657](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777217657.png)
+
+![1741777220233](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777220233.png)
+
+
+
+## IO软件的层次
+
+
+
+![1741777223641](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777223641.png)
+
+### 用户层软件
+
+
+
+
+
+![1741777375485](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777375485.png)
+
+### 设备独立性软件
+
+![1741777378814](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777378814.png)
+
+![1741777381668](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777381668.png)
+
+![image-20250312190618938](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312190618938.png)
+
+![1741777393871](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777393871.png)
+
+![1741777398811](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777398811.png)
+
+![1741777401693](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777401693.png)
+
+![1741777404810](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777404810.png)
+
+### 设备驱动程序
+
+
+
+![image-20250312190705580](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312190705580.png)
+
+![1741777412064](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777412064.png)
+
+### 中断处理程序
+
+
+
+![image-20250312190736519](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312190736519.png)
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312190736519.png)
+
+## 输入输出管理
+
+
+
+![image-20250312190741206](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312190741206.png)
+
+### IO应用程序接口
+
+
+
+![1741777716214](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312190939902.png)
+
+![1741777720122](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777720122.png)
+
+![1741777740368](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741777740368.png)
+
+**中断处理程序发现 中断信号是来源于网络控制器**
+
+### 阻塞/非阻塞IO
+
+**阻塞 I/O（Blocking I/O）**
+
+**特点：**
+
+- 进程（线程）在执行 I/O 操作时，如果数据没有准备好，会一直等待，直到 I/O 操作完成后才返回。
+- 期间进程会被挂起，操作系统会调度其他进程执行，直到 I/O 操作完成后，该进程才会被重新调度执行。
+
+---
+
+
+
+
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312191359477.png)
+
+想要把这块数据写到磁盘的时候，
+
+即使磁盘此时正处于忙碌当中，那设备独立性软件那一层也会快速响应这个系统调用请求，先把你这个数据先复制到内核，那接下来内核就慢慢地把这个数据写回磁盘，只要完成了这个数据复制的过程，就可以让你继续往下执行了。
+
+
+
+
+
+
+
+
+
+---
+
+
+
+### 设备驱动程序接口
+
+**设备独立的系统调用标准在同一个操作系统中是否一致?**
+
+同一个操作系统通常提供设备独立的标准接口来对外暴露统一的操作方法，这种抽象让应用程序不需要直接与硬件打交道。例如:
+文件系统操作:无论是读取硬盘、U盘还是网络存储设备，调用方式在应用程序层面可能只是一个统一的
+read()或write()。
+
+尽管**接口标准一致**，但某些地方可能因设备差异而有所不同:
+
+**底层驱动的实现方式不同:**
+
+比如硬盘的读写和网络存储设备O的读写虽然在调用层面是一致的，但驱动程序实现上会根据硬件差异而有所不同。
+某些设备可能具有专属功能，这些功能需要额外的控制命令
+
+**硬件支持的特性不同:**
+
+例如，同为打印机，不同型号可能支持的分辨率、颜色调整方式不同，驱动程序需要在具体实现中处理这些设备特性。
+
+**性能优化或设备限制:**
+某些硬件驱动程序可能针对特定硬件进行优化，而无法在其他设备上达到一致的行为或性能表现。
+
+
+
+
+
+---- 类似与多态
+
+
+
+![1741778070150](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741778070150.png)
+
+![1741778074042](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741778074042.png)
+
+![1741778078972](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741778078972.png)
+
+
+
+## IO核心子系统
+
+![image-20250312192755117](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312192755117.png)
+
+### IO调度
+
+
+
+![image-20250312192815621](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312192815621.png)
+
+### 设备保护
+
+
+
+![image-20250312192831938](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312192831938.png)
+
+### 假脱机技术
+
+
+
+![image-20250312192827831](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312192827831.png)
+
+![image-20250312192933581](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312192933581.png)
+
+![image-20250312192937204](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312192937204.png)
+
+![image-20250312192940387](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312192940387.png)
+
+![image-20250312192951901](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312192951901.png)
+
+![image-20250312193014775](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193014775.png)
+
+![image-20250312193018606](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193018606.png)
+
+![image-20250312193023017](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193023017.png)
+
+![image-20250312193028807](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193028807.png)
+
+---
+
+
+
+## 设备的分配和回收
+
+![image-20250312193140000](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193140000.png)
+
+![1741779060963](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779060963.png)
+
+![1741779065376](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779065376.png)
+
+![1741779072986](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779072986.png)
+
+### 静态分配和动态分配
+
+![1741779131715](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779131715.png)
+
+### 设备分配管理中的数据结构
+
+![1741779135348](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779135348.png)
+
+![1741779144187](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779144187.png)
+
+![1741779147572](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779147572.png)
+
+![1741779150433](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779150433.png)
+
+![1741779153841](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779153841.png)
+
+![1741779157448](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779157448.png)
+
+### 设备分配的步骤
+
+![1741779160573](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779160573.png)
+
+![1741779164236](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779164236.png)
+
+![1741779167630](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779167630.png)
+
+### 设备分配步骤的改进
+
+
+
+![image-20250312193328358](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193328358.png)
+
+![image-20250312193331211](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193331211.png)
+
+![image-20250312193335491](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193335491.png)
+
+![image-20250312193338946](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193338946.png)
+
+
+
+## 缓冲区的管理
+
+### 缓冲区的作用
+
+
+
+![image-20250312193515719](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193515719.png)
+
+
+
+![1741779416861](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779416861.png)
+
+### 单缓冲
+
+
+
+![1741779429265](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779429265.png)
+
+![1741779434454](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779434454.png)
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779445389.png)
+
+![1741779445389](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779445389.png)
+
+![1741779450340](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779450340.png)
+
+
+
+
+
+### 双缓冲
+
+
+
+![image-20250312193918867](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193918867.png)
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193908056.png)
+
+![image-20250312193928354](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193928354.png)
+
+### 使用单/双缓冲在通信时的区别
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193952260.png)
+
+
+
+
+
+![image-20250312193942651](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193942651.png)
+
+### 循环缓冲区
+
+
+
+![image-20250312193948057](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312193948057.png)
+
+
+
+
+
+![image-20250312194041525](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312194041525.png)
+
+
+
+### 缓冲池
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779670378.png)
+
+![1741779670378](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779670378.png)
+
+![1741779679210](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779679210.png)
+
+![1741779683095](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779683095.png)
+
+![1741779687563](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779687563.png)
+
+![1741779691211](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779691211.png)
+
+## 磁盘的结构
+
+![1741779731295](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779731295.png)
+
+![1741779736526](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779736526.png)
+
+
+
+
+
+![1741779740696](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779740696.png)
+
+
+
+### 磁盘的物理地址
+
+![1741779822393](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779822393.png)
+
+### 磁盘的分类
+
+![1741779836116](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779836116.png)
+
+![1741779840014](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779840014.png)
+
+![1741779843410](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741779843410.png)
+
+## 磁盘调度算法
+
+Hz：频率单位   
+
+60Hz  ---- 每秒 60 次**周期性变化**
+
+revolve ：旋转
+
+**角速度单位（转速）**
+
+- **1 转/秒（rps, revolutions per ==second==）** = 1 Hz（赫兹）
+- **1 转/分钟（rpm, revolutions per ==minute==）** =  1/60 Hz
+
+**Hz和秒有关系** 
+
+- 在机械、汽车、发动机、电机等领域常见，例如：
+  - "电机的转速是 3000 rpm" 意味着电机每分钟旋转 3000 次。
+
+---
+
+![image-20250312195814888](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312195814888.png)
+
+### 一次磁盘读/写操作需要的时间
+
+![image-20250312195820482](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312195820482.png)
+
+### FCFS
+
+
+
+
+
+![1741780530281](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780530281.png)
+
+### SSTF
+
+
+
+
+
+![1741780533703](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780533703.png)
+
+### SCAN
+
+
+
+
+
+![1741780537349](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780537349.png)
+
+### LOOK
+
+
+
+![1741780540726](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780540726.png)
+
+### C-SCAN
+
+
+
+![1741780544882](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780544882.png)
+
+### C-LOOK
+
+
+
+![1741780548814](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780548814.png)
+
+![image-20250312195903552](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312195903552.png)
+
+## 减少磁盘延迟时间的方法
+
+
+
+![1741780828182](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780828182.png)
+
+![1741780832073](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780832073.png)
+
+![1741780835741](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780835741.png)
+
+![1741780840135](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780840135.png)
+
+![1741780844008](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780844008.png)
+
+![1741780848432](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741780848432.png)
+
+
+
+![image-20250312200205944](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200205944.png)
+
+
+
+![image-20250312200351716](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200351716.png)
+
+
+
+
+
+
+
+
+
+
+
+## 磁盘的管理
+
+![image-20250312200359415](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200359415.png)
+
+### 磁盘的初始化
+
+
+
+
+
+![image-20250312200441008](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200441008.png)
+
+### 引导块
+
+![1741781116531](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741781116531.png)
+
+![1741781121177](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741781121177.png)
+
+
+
+
+
+### 坏块的处理
+
+![image-20250312200549277](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200549277.png)
+
+**“坏块对操作系统透明**”是指操作系统在使用存储设备(如硬盘或固态硬盘)时，不会直接感知到坏块的存在。这种“透明性“主要是通过存储设备的控制器和文件系统的管理来实现的。
+具体来说，存储设备的控制器(例如硬盘控制器)通常内置了坏块管理机制。当设备检测到坏块时，它会将数据自动重定向到备用的良好存储区域，这称为“坏块映射“或“重映射”。因此，操作系统和应用程序仍然可以正常地读取和写入数据，而不需要意识到这些坏块的存在。
+
+
+
+![image-20250312200617130](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200617130.png)
+
+## 固态硬盘SSD
+
+![](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/1741781190478.png)
+
+![image-20250312200703835](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200703835.png)
+
+
+
+![image-20250312200731061](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200731061.png)
+
+NAND 闪存的**最小写入单位是“页”（Page）**，而**最小擦除单位是“块”（Block）**。
+
+**固态硬盘的逻辑块不是块而是页**
+
+！！！
+
+SSD的写入单位是页，而擦除单位是块，块由多个页组成。当需要修改某个页的数据时，由于不能覆盖，SSD控制器会将该页的新数据写入到一个新的空闲页中
+
+
+
+
+
+![image-20250312200845016](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250312200845016.png)
