计网第二章

--- a/使用说明手册/项目相关.md
+++ b/使用说明手册/项目相关.md
@@ -198,6 +198,358 @@ username and useremail
 
 应用在每次提交代码版本时表明自己的身份
 
+## git 可视化
+
+**注意分支指针(e.g. main)和提交结点 (e.g. c1)**
+
+| **行为**             | `git checkout <分支>` | `git checkout <提交哈希>`        |
+| :------------------- | :-------------------- | :------------------------------- |
+| **HEAD 指向**        | 分支指针（如 `main`） | 直接指向提交（分离头状态）       |
+| **后续提交影响**     | 更新分支指针          | 不更新任何分支，可能导致提交丢失 |
+| **工作目录更新**     | 匹配分支最新提交      | 匹配指定提交的快照               |
+| **适用场景**         | 日常开发、分支协作    | 查看历史版本、临时修复旧问题     |
+| **是否推荐长期使用** | ✅ 是（正常开发流程）  | ❌ 否（需及时创建分支保存更改）   |
+
+ ![image-20250313200225176](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250313200225176.png)
+
+
+
+![image-20250313200414313](C:/Users/33813/AppData/Roaming/Typora/typora-user-images/image-20250313200414313.png)
+
+![image-20250313200419297](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250313200419297.png)
+
+
+
+
+
+---
+
+
+
+原本user1 在c4   ———— user2 在c7 的 
+
+然后**merge main** 都到了c9
+
+**最后各自提交**
+
+
+
+**多分支 merge main 重新基于最新的main 继续开发 切换 分支指针** 
+
+
+
+![image-20250313201527118](https://cdn.jsdelivr.net/gh/kasahuki/os_test@main/img/image-20250313201527118.png)
+
+
+
+## git 工作流程
+
+
+
+### **开发场景：团队开发一个电商网站**
+
+**团队角色**：
+
+- **开发者A**：负责开发“用户登录”功能。
+- **开发者B**：负责开发“购物车”功能。
+- **主分支**：`main`（稳定版本，部署到生产环境）。
+
+------
+
+### **1. 初始化项目与远程仓库**
+
+1. **创建远程仓库**：在 GitHub 上新建仓库 `ecommerce`，默认分支为 `main`。
+
+2. **克隆仓库到本地**：所有开发者执行：
+
+   ```
+   git clone https://github.com/your-username/ecommerce.git
+   cd ecommerce
+   ```
+
+------
+
+### **2. 开发者A开发“用户登录”功能**
+
+#### **步骤 1：创建本地分支**
+
+```
+git checkout main         # 切换到主分支
+git pull origin main     # 拉取最新代码
+git checkout -b feature/login  # 创建并切换到新分支
+```
+
+#### **步骤 2：开发并提交代码**
+
+- 修改代码后提交到本地分支：
+
+  ```
+  git add .                     # 添加所有修改
+  git commit -m "feat: 实现用户登录接口"
+  ```
+
+#### **步骤 3：推送分支到远程仓库**
+
+```
+git push origin feature/login  # 推送分支到 GitHub
+```
+
+#### **步骤 4：发起 Pull Request (PR)**
+
+1. 在 GitHub 仓库页面，点击 `Compare & pull request`。
+2. 填写 PR 标题和描述（如“新增用户登录功能”），指定合并到 `main` 分支。
+3. 等待团队代码审查，修改后通过 PR 合并到 `main`。
+
+------
+
+### **3. 开发者B开发“购物车”功能**
+
+#### **步骤 1：创建本地分支**
+
+```
+git checkout main         # 切换到主分支
+git pull origin main     # 拉取最新代码（包含开发者A的提交）
+git checkout -b feature/cart  # 创建并切换到新分支
+```
+
+#### **步骤 2：开发并提交代码**
+
+- 修改代码后提交到本地分支：
+
+  ```
+  git add .
+  git commit -m "feat: 实现购物车添加商品功能"
+  ```
+
+#### **步骤 3：推送分支到远程仓库**
+
+```
+git push origin feature/cart
+```
+
+#### **步骤 4：发起 Pull Request**
+
+1. 提交 PR 到 `main` 分支，等待审查和合并。
+
+------
+
+### **4. 处理合并冲突**
+
+**假设场景**：开发者A和B同时修改了同一文件（如 `index.html`），合并时发生冲突。
+
+#### **解决冲突流程**：
+
+1. **拉取最新 `main` 分支代码**：
+
+   ```
+   git checkout feature/cart     # 切换到自己的分支
+   git fetch origin             # 获取远程最新状态
+   git merge origin/main        # 合并 main 分支到当前分支
+   ```
+
+2. **手动解决冲突**：
+
+   - 使用编辑器打开冲突文件，根据提示保留需要的代码（如保留 `<<<<<<< HEAD` 和 `>>>>>>> main` 之间的修改）。
+
+3. **标记冲突已解决并提交**：
+
+   ```
+   git add .                    # 标记冲突已解决
+   git commit -m "fix: 解决与 main 分支的冲突"
+   git push origin feature/cart # 重新推送分支
+   ```
+
+------
+
+### **5. 代码合并到主分支**
+
+- **通过 GitHub PR 合并**：
+  - 审核者查看代码差异，确认无问题后点击 `Merge pull request`。
+  - 合并后，`main` 分支将包含新功能。
+
+------
+
+### **6. 所有开发者同步最新代码**
+
+- **定期拉取 `main` 分支更新**：
+
+  ```
+  git checkout main             # 切换到主分支
+  git pull origin main          # 拉取最新代码（包含他人合并的内容）
+  ```
+
+------
+
+### **关键操作总结**
+
+| **操作**           | **命令/动作**                                | **目的**                   |
+| :----------------- | :------------------------------------------- | :------------------------- |
+| 创建并切换分支     | `git checkout -b <分支名>`                   | 基于最新代码开始新功能开发 |
+| 提交代码到本地     | `git add .` + `git commit -m "消息"`         | 保存本地修改               |
+| 推送分支到远程     | `git push origin <分支名>`                   | 共享代码或发起 PR          |
+| 发起 Pull Request  | GitHub 页面操作                              | 请求代码审查并合并到主分支 |
+| 解决冲突           | `git merge origin/main` + 手动修复           | 确保分支代码与主分支兼容   |
+| 同步主分支最新代码 | `git checkout main` + `git pull origin main` | 保持本地代码与团队进度一致 |
+
+### git 个人开发本地git仓库多分支
+
+在个人开发中，本地仓库使用多个分支 **非常有用**！即使没有团队协作，合理使用分支也能显著提升开发效率和代码安全性。以下是具体原因和典型场景：
+
+---
+
+### **1. 为什么个人开发需要多个分支？**
+#### **核心价值**：
+- **隔离不同任务**：避免功能开发、Bug 修复、实验性代码互相干扰。
+- **降低风险**：保持主分支（如 `main`）始终稳定可运行。
+- **灵活回溯**：随时切换到不同分支，测试或回滚特定功能。
+
+---
+
+### **2. 个人开发中的分支使用场景**
+#### **场景 1：开发新功能**
+- **操作**：
+  ```bash
+  git checkout -b feature/new-login  # 创建并切换到新功能分支
+  # 开发并提交代码...
+  git add . && git commit -m "feat: 新登录页面"
+  ```
+- **优势**：
+  - 主分支 `main` 保持干净，随时可部署。
+  - 功能开发失败时，直接删除分支即可，不影响主分支。
+
+#### **场景 2：修复紧急 Bug**
+- **操作**：
+  ```bash
+  git checkout main                 # 切换到主分支
+  git checkout -b hotfix/header     # 创建紧急修复分支
+  # 修复代码并提交...
+  git add . && git commit -m "fix: 修正导航栏错位"
+  git checkout main                # 切回主分支
+  git merge hotfix/header          # 合并修复
+  ```
+- **优势**：
+  - 修复代码与当前开发中的功能解耦，避免引入未完成的代码。
+
+#### **场景 3：尝试实验性方案**
+- **操作**：
+  ```bash
+  git checkout -b experiment/redis-cache  # 创建实验分支
+  # 尝试新库或新技术...
+  # 若成功：
+  git checkout main
+  git merge experiment/redis-cache
+  # 若失败：
+  git branch -D experiment/redis-cache    # 直接删除分支
+  ```
+- **优势**：
+  - 大胆尝试新技术，失败不影响主分支。
+
+#### **场景 4：版本回退与历史对比**
+- **操作**：
+  ```bash
+  git checkout main                 # 切换到主分支
+  git checkout -b debug-issue      # 基于主分支创建调试分支
+  # 复现问题并修复...
+  git diff main debug-issue        # 对比主分支与调试分支差异
+  ```
+- **优势**：
+  - 精准定位问题，保留调试过程记录。
+
+---
+
+### **3. 分支管理的最佳实践**
+#### **(1) 主分支（`main`/`master`）**
+- **用途**：始终存放 **稳定、可运行** 的代码。
+- **禁止直接提交**：只通过合并其他分支更新代码。
+
+#### **(2) 功能分支（`feature/*`）**
+- **用途**：开发新功能或模块。
+- **生命周期**：功能完成后合并到 `main` 并删除。
+
+#### **(3) 修复分支（`hotfix/*`/`bugfix/*`）**
+- **用途**：修复主分支的紧急问题。
+- **流程**：从 `main` 创建，修复后合并回 `main`。
+
+#### **(4) 实验分支（`experiment/*`）**
+- **用途**：尝试高风险改动或新技术。
+- **心态**：允许失败，随时丢弃。
+
+---
+
+### **4. 分支操作的效率工具**
+#### **(1) 快速切换分支**
+```bash
+git checkout main           # 切换到主分支
+git checkout feature/login  # 切回功能分支
+```
+
+#### **(2) 查看分支状态**
+```bash
+git branch -v               # 查看本地分支及最新提交
+git log --oneline --graph   # 图形化查看提交历史
+```
+
+#### **(3) 清理无用分支**
+```bash
+git branch -d hotfix/header  # 删除已合并的分支
+git branch -D experiment/xxx # 强制删除未合并的分支
+```
+
+---
+
+### **5. 个人开发分支流程图**
+```
+main（稳定版本）
+│
+├─ feature/login（新功能开发）
+│   ├─ 提交1：初始化登录页面
+│   └─ 提交2：对接后端接口
+│
+├─ hotfix/header（紧急修复）
+│   └─ 提交1：修正导航栏样式
+│
+└─ experiment/redis（实验分支）
+    └─ 提交1：尝试 Redis 缓存方案（可能废弃）
+```
+
+---
+
+
+
+#### **Git（本地）的分支管理**
+
+- **核心操作**：
+  - `git branch`：创建、查看、删除分支。
+  - `git checkout`/`git switch`：切换分支。
+  - `git merge`：合并分支（直接在本地完成）。
+- **适用场景**：
+  - 个人本地开发时隔离功能、修复或实验。
+  - 无需远程协作，所有操作在本地完成。
+
+#### **GitHub（远程）的分支管理**
+
+- **核心操作**：
+  - `git push`：将本地分支推送到远程仓库。
+  - **Pull Request（PR）**：发起代码审查请求，审核通过后合并到主分支。
+  - **Protected Branches**：保护主分支（如 `main`），禁止直接推送，必须通过 PR 合并。
+
+
+
+---
+
+### **提交到的区域**
+
+1. **本地仓库的工作区（Working Directory）**
+   - 这是你正在进行开发的地方，存放着未提交的文件。
+   - 当你修改文件时，文件会处于“修改”状态，需要通过 `git add` 命令将其添加到暂存区（Staging Area）。
+2. **暂存区（Staging Area）**
+   - 暂存区是一个临时存储区域，用于存放你希望提交的文件快照。
+   - 使用 `git add` 命令将更改从工作区（Working Directory）添加到暂存区。
+   - 你可以选择将特定文件或所有更改添加到暂存区。
+3. **本地仓库（Local Repository）**
+   - 一旦你通过 `git commit` 提交了更改，这些更改就会存储在本地仓库中。每个分支都有自己的提交历史。
+   - 提交会创建一个新的提交对象（commit object），它指向当前的 **提交树**，以及提交时的 **父提交**。
+
 ## git 的三个区域
 
 ### 1.工作区
